Fixed image overflow at small sizes in product overview page.

--- a/site/app/stylesheets/site.scss
+++ b/site/app/stylesheets/site.scss
@@ -1004,7 +1004,7 @@ body.simple {
     text-align: justify;
     img {
       float: right;
-      margin: 0px 20px 20px 40px;
+      margin: -40px 20px 20px 40px;
     }
   }
 
@@ -1012,6 +1012,16 @@ body.simple {
     clear: both;
   }
 }
+@media (max-width: 980px) {
+ .overview {
+    img {
+     float: none !important;
+     width: 90% !important;
+     margin-left: 5% !important;
+     margin-top: 0 !important;
+    }
+  }
+} 
 
 /* Outage notification */
 #outage_notification {
